building out the navigation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
   <link rel="stylesheet" href="./resources/css/style.css">
 </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+            <li><a href="#">Butterflies</a></li>
+            <li><a href="#">Pelicans</a></li>
+            <li><a href="#">Seagulls</a></li>
+          </ul>
+      </nav>
+
+    </header>
     <main>
       <div class="row image"></div>
       <div class="row columns">
