last change footer

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
   <link rel="stylesheet" href="./resources/css/style.css">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
 </head>
   <body>
     <header>
@@ -17,11 +18,22 @@
     <main>
       <div class="row image"></div>
       <div class="row columns">
-        <div class="yellow"></div>
-        <div class="red"></div>
-        <div class="green"></div>
+        <div class="yellow">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper ultrices blandit. Vivamus tincidunt imperdiet nisl, sit amet interdum nisl. Quisque dui mi, ultricies eu faucibus in, euismod vitae nulla. Sed non pretium mauris. Morbi id lectus id ex posuere volutpat. Mauris vehicula felis et lorem egestas hendrerit.</p>
+        </div>
+
+        <div class="red">
+          <p>Duis bibendum varius mi, eu mollis quam imperdiet ultricies. Mauris ac odio leo. In vehicula mollis lacus, sed egestas risus congue et. Suspendisse ullamcorper quis nibh nec volutpat.</p>
+        </div>
+
+        <div class="green">
+          <p>Duis vitae orci aliquet, ornare velit sed, rutrum velit. Mauris rhoncus iaculis enim, in semper nibh cursus sit amet. Etiam scelerisque elit libero, nec condimentum est semper nec. Sed at est non magna luctus luctus id sit amet lorem.</p>
+        </div>
+
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <p><i class="fa fa-copyright"></i>Elizabeth Owsley 2020</p>
+    </footer>
   </body>
 </html>
